DOC-4317: Fix code blocks overlapping the table headers

--- a/antora-theme/css/outscale.css
+++ b/antora-theme/css/outscale.css
@@ -698,6 +698,7 @@ code, kbd, pre {
   border: 1px solid #e1e1e1;
   -webkit-box-shadow: inset 0 -1px 0 0 #e1e1e1; 
   box-shadow: inset 0 -1px 0 0 #e1e1e1;
+  z-index: 1;
 }
 
 .doc table.tableblock img[src*="scrNbRed"] {
